--- a/index.html
+++ b/index.html
@@ -1,26 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Крестики-нолики</title>
-    <script type="module" src="js/tick_tack_toe.js"></script>
-    <link rel="stylesheet" href="css/ticl_tack_toe.css" />
-  </head>
-  <body>
-    <h1>Крестики\Нолики<br />локальная игра на несколько человек</h1>
-    <div class="ttt">
-      <form method="POST" onsubmit="preventstartGame(event);return;">
-        <label>Размер поля:</label>
-        <label for="width">ширина</label
-        ><input type="number" name="width" id="width" value="4" />
-        <label for="height">высота</label
-        ><input type="number" name="height" id="height" value="4" /><br />
-        <label for="players_num">Сколько игроков?</label
-        ><input type="number" name="players_num" id="players_num" value="1" /><br />
-        <input type="submit" value="Начать" />
-      </form>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Крестики-нолики</title>
+  <script type="module" src="js/tick_tack_toe.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css"
+    integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/grids-responsive-min.css">
+  <link rel="stylesheet" href="css/tick_tack_toe.css" />
+</head>
+
+<body>
+  <div class="ttt pure-g">
+    <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+      <h1>Крестики\Нолики</h1>
+      <h3>локальная игра на несколько человек</h3>
+      <section class="pure-u-1">
+        <form class='pure-form pure-form-aligned' method="POST" onsubmit="startGame(event)">
+          <fieldset>
+            <legend>Настройки игры</legend>
+            <div class="pure-control-group">
+              <label>Размер поля:</label>
+              <div class="pure-control-group">
+                <label for="width">ширина</label><input class="pure-input-1-2" type="number" name="width" id="width"
+                  value="4" max="100" />
+              </div>
+              <div class="pure-control-group">
+                <label for="height">высота</label><input class="pure-input-1-2" type="number" name="height" id="height"
+                  value="4" max="100" />
+              </div>
+            </div>
+            <div class="pure-control-group">
+              <label for="players_num">Количество игроков</label><input class="pure-input-1-2" type="number"
+                name="players_num" id="players_num" value="1" max="10" />
+            </div>
+            <button class="pure-button pure-button-primary button-xlarge pure-u-1 pure-u-md-1-2 m-auto d-block"
+              type="submit">Начать</button>
+          </fieldset>
+        </form>
+      </section>
+      <section class="pure-u-1">
+        <div class='ttt_board'></div>
+      </section>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
