--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
   <div class="ttt pure-g">
-    <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+    <div class="pure-u-1">
       <h1>Крестики\Нолики</h1>
       <h3>локальная игра на несколько человек</h3>
-      <section class="pure-u-1">
+      <section class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
         <form class='pure-form pure-form-aligned' method="POST" onsubmit="startGame(event)">
           <fieldset>
             <legend>Настройки игры</legend>
@@ -43,7 +43,11 @@
           </fieldset>
         </form>
       </section>
-      <section class="pure-u-1">
+      <section class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+        <div class="pure-button-group ttt_control-panel" role="group" aria-label="...">
+          <a class='pure-button button-secondary new-game' href='#'>Играть с начала</a>
+          <a class='pure-button button-secondary full-size-button' href='#'><span>➤</span><span>➤</span></a>
+        </div>
         <div class='ttt_board'></div>
       </section>
     </div>
